trying to fix scroll issue on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
         background-image: linear-gradient(rgba(255, 255, 255, 0.080) 1px, transparent 1px), 
         linear-gradient(90deg, rgba(255, 255, 255, 0.080) 1px, transparent 1px);
         background-size: 20rem 20rem;
+        overflow: hidden;
     }
     
     .container{
